  framests. I'll work on these things tomorrow.
- Some other small fixes

Reggie, 12.8.1999:
------------------
- Fixed more redraw and formatting bugs


Reggie, 13.8.1999:
------------------
- Big cleanups and some optimations in KWFormat and KWFormatContext
- We have now always fast access to the empty/drawable region of
  the frame we are working in through the KWFormatContext
- Started using QRegions to always clear empty areas correctly
  (when this QRegion stuff is done most of the remaining redraw errors will
   be fixed :-)

Reggie, 19 - 20.8.1999:
-----------------------
- Fixed much more drawing errors using QRegions. QRegions are really cooool!
  Now all big drawing and formatting errors seem to be fixed :-)
- Removed some hacks which are not needed anymore
- Fixed some crashing code

Reggie, 24.8.1999:
------------------
- Fix in framedia
- Implemented inserting custom variables
- Implemented editing values of custom variables
- Some fixes

Reggie, 25.8.1999:
------------------
- Implemented saving and loading of custom variables

Reggie, 26.8.1999:
------------------
- Cleanups

Reggie, 29.8.1999:
------------------
- Fixed a redraw bug (always repaint new area when scrolling)
- Some other fixes

Reggie, 31.8.1999:
------------------
- Improved DnD, Copy/Move works now :-)

Reggie, 1.9.1999:
-----------------
- Return/Enter is now more flickerfree
- More redraw improvements
- More optimations of Return/Enter to make it even more flickerfree

Reggie, 2.9.1999:
-----------------
- Small speed improvement

Reggie, 3.9.1999:
-----------------
- Fix in saving text

Reggie, 7.9.1999:
-----------------
- Implemented all internals for serial letters and
  the dialog for inserting serial letter variables.

Reggie, 12.9.1999:
------------------
- More work on serial letters
- Some fixes for pixmaps in new and old fileformat

Reggie, 13.9.1999:
------------------
- Saving/Loading pixmaps follows now the new fileformat SPECS