@@ -1489,3 +1489,10 @@ Reggie, 12.9.1999:
 Reggie, 13.9.1999:
 ------------------
 - Saving/Loading pixmaps follows now the new fileformat SPECS
+
+Reggie, 16.9.1999:
+------------------
+- More work on the serial letter database (works finally)
+- Implemented printing serial letters => everything for serial
+  letters works now, only the editor for the serial letter 
+  database is not working yet
